IN PROGRESS - issue HREPTWO-1399: Xinha/IE7: Resizing Xinha to full screen messed up
- Created custom fullscreen plugin that a) does a restore instead of re-init and b) in IE fullscreen it moves Xinha to the body element and restores it in it original dom-location.
- Changed AutoResize plugin to handle scrollbars correctly in IE and use the correct width (the original width of the textarea)
- Added a minHeight for Xinha textArea's

svn path=/hippo-ecm/trunk/; revision=13264

--- a/cms/package/skin/src/main/webapp/style.css
+++ b/cms/package/skin/src/main/webapp/style.css
@@ -483,11 +483,11 @@ z-index: 5;
 .templatedetails div.templateItem input,
 .editor div.renderItem div input, .editor table.templateItemTable input{width: 100%;}
 .editor div.renderItem div select, .editor table.templateItemTable select{}
-.templatedetails div.templateItem textarea, .editor div.renderItem div textarea, .editor table.templateItemTable textarea{width: 100%; height: 300px}
+.templatedetails div.templateItem textarea, .editor div.renderItem div textarea, .editor table.templateItemTable textarea{width: 100%; height: 200px; border: none;}
  
 .editor div.renderItem div.datePicker input{width: 80px;}
 
-
+.editor table.htmlarea {border: 1px solid #666666;}
 /* Xinha */
 /* ================================================ */
 table.htmlarea tr td{border: none}
